Add ability to send images and videos along with text messages
Update API to accept multiple media items for campaign messages and modify frontend to allow uploading images and videos.
